<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="netology">Netology. University of Internet Professions.</string>
    <string name="data">21 may on 18.36</string>
    <string name="hey">Hello, this is the new Netology!</string>
    <string name="start">Once upon a time, Netology began with online marketing intensives. Then there were courses on design, development, analytics and management. We grow ourselves and help stents grow: from beginners to confident professionals.</string>
    <string name="missia">But the most important thing remains with us: we believe that everyone already has the power that makes you want more, aim higher, run faster. Our mission is to help you get on the path of growth and start the chain of change -</string>
    <string name="line" translatable="false">http://netolo.gy/fyb</string>
    <string name="favoriteText" translatable="false">1</string>
    <string name="eyeText" translatable="false">555</string>
    <string name="shareText" translatable="false">356</string>
    <string name="post_menu_remove">Remove</string>
    <string name="post_text">Post Test</string>
    <string name="empty_post_error">Empti post</string>
    <string name="post_menu_change">Change</string>
    <string name="chooser_share_post">Share post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="post_input">Post text</string>

    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>

    <string name="notification_user_post">User %1$s public new post %2$s\'s post</string>

    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>

</resources>